java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType57991-hints.pass
Create field foo in org.netbeans.test.java.hints.IncorrectType57991
